Se crea el paquete common y se ajusta el codigo

--- a/microservice-usuarios/src/main/resources/application.properties
+++ b/microservice-usuarios/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=estudiantes
 
 server.port=${PORT:8001}
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/dbusuarios
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_alumnos
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
