--- a/microservice-usuarios/pom.xml
+++ b/microservice-usuarios/pom.xml
@@ -19,13 +19,15 @@
     <dependencies>
 		<dependency>
             <groupId>com.andres</groupId>
-			<artifactId>common</artifactId>
-			<version>1.0</version>
+		<artifactId>common</artifactId>
+		<version>1.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        
+        <!-- Modulo common-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
