--- a/zuul/pom.xml
+++ b/zuul/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.andres</groupId>
     <artifactId>zuul</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0</version>
     <name>zuul</name>
     <description>zuul</description>
     <properties>
@@ -82,5 +82,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
