--- a/zuul/src/main/resources/application.properties
+++ b/zuul/src/main/resources/application.properties
@@ -6,8 +6,14 @@ server.port=${PORT:8002}
 eureka.instance.instance-id=${spring.application.name}:${random.value}
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-#Zuul
+#Zuul microservice estudiantes
 zuul.routes.estudiantes.service-id=estudiantes
 zuul.routes.estudiantes.path=/api/v1/students/**
+
+
+#Zuul microservice cursos
+zuul.routes.courses.service-id=courses
+zuul.routes.courses.path=/api/v1/courses/**
+
 
 spring.main.web-application-type=reactive
